#FILE(GLOB source_file CONFIGURE_DEPENDS *.cpp )
#FILE(GLOB source_head_file CONFIGURE_DEPENDS *.h)
FILE(GLOB cuda_source_file CONFIGURE_DEPENDS *.cu)
#message(".cpp: " ${source_file})
#message(".h  : " ${source_head_file})
#message(".cu : " ${cuda_source_file})
#add_library(introduction ${source_file} ${source_head_file} ${cuda_source_file})
add_library(introduction ${cuda_source_file})
target_include_directories(introduction PUBLIC .)
target_link_libraries(introduction PRIVATE common)
set_target_properties(introduction PROPERTIES LINKER_LANGUAGE CUDA)