FILE(GLOB source_file CONFIGURE_DEPENDS *.cpp )
FILE(GLOB source_head_file CONFIGURE_DEPENDS *.h)
#message(".cpp: " ${source_file})
#message(".h  : " ${source_head_file})
#message(".cu : " ${cuda_source_file})
add_library(common ${source_file} ${source_head_file})
target_include_directories(common PUBLIC .)
#set_target_properties(common PROPERTIES CMAKE_CXX_CREATE_STATIC_LIBRARY ON)
#set_target_properties(common PROPERTIES LINKER_LANGUAGE CXX)